# learning-pyo3

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: strings.rs
tests/: test_strings.py
